--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:migrate": "npx typeorm migration:create -d src/shared/migrations -n",
+    "typeorm:run": "npx typeorm migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.5.1",
+    "@nestjs/graphql": "^7.5.5",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "@types/graphql": "^14.5.0",
     "apollo-server-core": "^2.15.1",
     "apollo-server-express": "^2.15.1",
     "apollo-server-types": "^0.5.1",
+    "bcrypt": "^5.0.0",
     "graphql": "^15.2.0",
-    "graphql-tools": "^6.0.12",
+    "graphql-tools": "^6.0.14",
     "mysql": "^2.18.1",
+    "nest-access-control": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -46,6 +54,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
