basic structure of app created for starter package  - register & login mutation created(class-validator not working)

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,11 @@
     "password": "123456789",
     "database": "cv",
     "entities": [
-        "dist/**/*.entity{.ts,.js}"
+        "dist/**/*.entity.js"
     ],
     "migrations": [
-        "dist/shared/migrations/*{.ts,.js}"
+        "dist/shared/migrations/*.js"
     ],
-    "synchronize": false,
+    "synchronize": true,
     "migrationRun": false
-
 }
