--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm:migrate": "npx typeorm migration:create -d src/shared/migrations -n",
-    "typeorm:run": "npx typeorm migration:run"
+    "typeorm:run": "npx typeorm migration:run",
+    "typeorm:revert": "npx typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -35,8 +36,9 @@
     "apollo-server-express": "^2.15.1",
     "apollo-server-types": "^0.5.1",
     "bcrypt": "^5.0.0",
+    "class-validator": "^0.12.2",
     "graphql": "^15.2.0",
-    "graphql-tools": "^6.0.14",
+    "graphql-tools": "^6.2.3",
     "mysql": "^2.18.1",
     "nest-access-control": "^2.0.2",
     "passport": "^0.4.1",
